# portsentinel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Contributing.md  Dockerfile.agent  Dockerfile.master  README.md  bundle.sh  docker-compose.yml  install.sh
agent/: Cargo.toml
agent/src/: config.rs  main.rs
agent/src/system/: docker.rs  logs.rs  mod.rs  monitor.rs  process.rs  services.rs
master/: Cargo.toml
master/assets/: app.js  index.html  styles.css
master/db/: schema.sql
master/src/: auth.rs  db.rs  handlers.rs  main.rs  state.rs
master/templates/: change_password.html  containers.html  containers_rows.html  log_modal.html  log_read.html  login.html  rows.html  services.html  stats.html
shared/: Cargo.toml
shared/src/: lib.rs
