[package]
name = "port_sentinel_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Imports the shared models
port_sentinel_shared = { path = "../shared" }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tower-http = { version = "0.5", features = ["cors"] } # CORS needed if on different domains
clap = { version = "4.4", features = ["derive"] }
regex = "1.12.2"
