[package]
name = "port_sentinel_master"
version = "0.1.0"
edition = "2021"

[dependencies]
port_sentinel_shared = { path = "../shared" }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
askama = "0.12"
askama_axum = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
clap = { version = "4.4", features = ["derive"] }